--- a/Challenge 2/style.css
+++ b/Challenge 2/style.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 
-.container {
+.container, .container-1 {
     width : 75%;
     margin: auto;
 }
@@ -22,6 +22,7 @@
     align-items: center;
     padding: 10px;
 }
+
 
 #generate-button{
     background-color: green;
@@ -48,3 +49,28 @@
     background-color: rgb(70, 107, 139);
     box-shadow: 0px 10px 50px rgba(0,0,0,0.7);
 }
+
+/* Challenge 3 */
+#flex-box-container #rock:hover{
+    box-shadow: 0px 10px 50px rgba(187, 53, 142, 0.9);
+    margin: 20px;
+}
+
+#flex-box-container #paper:hover{
+    box-shadow: 0px 10px 50px rgba(243, 207, 6, 0.9);
+    margin: 20px;
+}
+
+#flex-box-container #scissors:hover{
+    box-shadow: 0px 10px 50px rgba(53, 127, 187, 0.9);
+    margin: 20px;
+}
+
+#flex-box-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    border: 1px solid black;
+    padding: 25px;
+}
+
