--- a/Blackjack/style.css
+++ b/Blackjack/style.css
@@ -1,76 +1,144 @@
-*{
+* {
     padding: 0;
-    margin: 0;
+    margin : 0;
 }
 
-.center{
+body{
+    background-color: black;
+    overflow-y: hidden;
+}
+
+.big {
+    display: flex;
+
+}
+
+.rules {
+    display       : flex;
+    flex-direction: column;
+    padding       : 0 10px;
+    flex-basis    : 20rem;
+    margin        : 0 20px;
+
+}
+
+.rules h1 {
+    color      : #095729;
+    font-family: 'Black Ops One', cursive;
+}
+
+.rules p, ol li {
+    font-weight: 100;
+    font-family: cursive;
+    color      : #095729;
+}
+
+.rule {
+    margin: 10px;
+}
+
+.center {
     text-align: center;
 }
 
-.container{
-    width: 75%;
-    margin: 12px auto;
-    border: 2px solid black;
+.container {
+    width     : 75%;
+    margin    : 12px auto;
+    
+    flex-basis: auto;
 }
 
-.flex-row-1, .flex-row-2{
-    display: flex;
-    justify-content: space-around;
-    border: 1px solid black;
-    flex-wrap: wrap;
-    padding: 10px;
-    background: url("https://media.istockphoto.com/vectors/poker-table-background-in-green-color-vector-id1218355494?k=20&m=1218355494&s=612x612&w=0&h=7izk2bQU_LDnKLLLbwAolAo4kwUmcwr_mo8_Vr7955w=") center;
+.flex-row-1,
+.flex-row-2 {
+    display          : flex;
+    justify-content  : space-around;
+    border           : 1px solid black;
+    flex-wrap        : wrap;
+    padding          : 10px;
+    background       : url("https://media.istockphoto.com/vectors/poker-table-background-in-green-color-vector-id1218355494?k=20&m=1218355494&s=612x612&w=0&h=7izk2bQU_LDnKLLLbwAolAo4kwUmcwr_mo8_Vr7955w=") center;
     background-repeat: no-repeat;
-    background-size: cover;
-    color: white;
+    background-size  : cover;
+    color            : white;
 }
 
-.flex-row-3{
-    display: flex;
+.flex-row-3 {
+    display        : flex;
     justify-content: space-around;
-    border: 1px solid black;
-    flex-wrap: wrap;
-    padding: 10px;
+    
+    flex-wrap      : wrap;
+    padding        : 10px;
 }
 
-.flex-row-1 div{
+.flex-row-1 div {
     /* border: 1px solid black; */
     padding: 10px;
-    height: 350px;
-    flex: 1;
+    height : 450px;
+    flex   : 1;
 }
 
-.flex-row-1 img{
-    width: 18%;
+.flex-row-1 img {
+    width  : 18%;
     padding: 10px;
 }
 
-table, th, td{
-    padding: 5px;
-    border: 1px solid black;
-    text-align: center;
+table,
+th,
+td {
+    padding        : 5px;
+    border         : 1px solid black;
+    text-align     : center;
+    border-collapse: collapse;
 }
 
-.btn{
-    border: 1px solid black;
+table {
+    width: 50%;
+}
+
+th {
+    background-color: #095729;
+    color           : white;
+}
+
+td {
+    background-color: white;
+    color           : black;
+}
+
+.btn {
+    border       : 1px solid black;
     border-radius: 10px;
-    font-size: 16px;
-    padding: 10px 30px;
-    font-weight: bold;
-    color: white;
-    margin: 12px;
-    cursor: pointer;
+    font-size    : 16px;
+    padding      : 10px 30px;
+    font-weight  : bold;
+    color        : white;
+    margin       : 12px;
+    cursor       : pointer;
 }
 
-#deal-btn{
+#deal-btn {
     background-color: rgb(149, 7, 7);
 }
 
-#stand-btn{
+#stand-btn {
     background-color: rgb(241, 221, 37);
-    color: black;
+    color           : black;
 }
 
-#hit-btn{
+#hit-btn {
     background-color: rgb(32, 32, 153);
 }
+
+#blackjack-result{
+    font-size: 2rem;
+    color: white;
+}
+
+.game-header{
+    padding-right     : 10px;
+    
+   color: white;
+    margin        : 10px 40px;
+    font-size: 3rem;
+    font-family:  'Black Ops One', cursive;
+}
+
